# CheckWeatherTelegramBOT

./: README.md  setup.cfg
src/: Weather.py  WeatherFactory  __main__.py  threeb_weather.py
