[metadata]
name = check_weather_conditions
version = 0.0.1
author = Lorenzo Battistello
author_email = lori.battistello@gmail.com
description = Telegram bot to check weather

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires =
    python-telegram-bot
    requests
    bs4

[options.packages.find]
where = src
